# adapters

./: .env-example  .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  README.md  app.py  mypy.ini  pyproject.toml  pytest.ini  remove_files_with_string.sh  test_bigmodel.py
.circleci/: config.yml
.github/workflows/: check.yml  pr-check.yml  publish.yml
adapters/: __init__.py  adapter_factory.py  client_cache.py  constants.py  custom_openai_sdk_chat_adapter.py  custom_sdk_chat_provider_adapter.py  general_utils.py  rate_limiter.py  requirements.txt  types.py
adapters/abstract_adapters/: __init__.py  api_key_adapter_mixin.py  base_adapter.py  chat_http_api_adapter.py  http_api_adapter_mixin.py  openai_sdk_chat_adapter.py  provider_adapter_mixin.py  sdk_chat_adapter.py
adapters/concrete_adapters/: __init__.py  you_com_rag_chat_adapter.py
adapters/provider_adapters/: __init__.py  ai21_sdk_chat_provider_adapter.py  anthropic_sdk_chat_provider_adapter.py  anyscale_sdk_chat_provider_adapter.py  azure_sdk_chat_provider_adapter.py  bedrock_sdk_chat_provider_adapter.py  bigmodel_provider_adapter.py  cerebras_sdk_chat_provider_adapter.py  cohere_sdk_chat_provider_adapter.py  databricks_sdk_chat_provider_adapter.py  deepinfra_sdk_chat_provider_adapter.py  fireworks_sdk_chat_provider_adapter.py  gemini_sdk_chat_provider_adapter.py  groq_sdk_chat_provider_adapter.py  lepton_sdk_chat_provider_adapter.py  moescape_sdk_chat_provider_adapter.py  moonshot_sdk_chat_provider_adapter.py  octoai_sdk_chat_provider_adapter.py  openai_sdk_chat_provider_adapter.py  openrouter_sdk_chat_provider_adapter.py  perplexity_sdk_chat_provider_adapter.py  tensoropera_sdk_chat_provider_adapter.py  together_sdk_chat_provider_adapter.py  vertex_sdk_chat_provider_adapter.py
adapters/utils/: adapter_stream_response.py  general_utils.py  network_utils.py  openai_client_factory.py
docs/: generate.py  index.html  index.md
myenv/: pyvenv.cfg
myenv/Scripts/: Activate.ps1  activate  activate.bat
pages/: generate.py  models.md
scripts/: update_supported_models_gateway_docs.py
tests/: conftest.py  test_adapter_factory.py  test_context_length.py  test_conversation.py  test_load_request_body_with_additional_params.py  test_types.py  utils.py
tests/adapters/: test_adapter_factory.py  test_completion.py  test_completion_stream.py  test_empty_content.py  test_execute.py  test_execute_assistant_first.py  test_execute_assistant_trailing_whitespace.py  test_execute_empty_content.py  test_execute_functions.py  test_execute_json_content.py  test_execute_json_output.py  test_execute_multiple_system.py  test_execute_n.py  test_execute_repeating_roles.py  test_execute_stream.py  test_execute_system.py  test_execute_system_assistant.py  test_execute_temperature.py  test_execute_tools.py  test_execute_tools_choices.py  test_execute_tools_choices_none.py  test_execute_tools_choices_required.py  test_execute_vision.py  test_max_completion_tokens.py  test_max_tokens.py  test_min_p.py  test_n.py  test_stop.py  test_stream.py  test_temperature.py  test_top_k.py  test_top_p.py  test_user_only.py  test_user_only_conversation.py  test_user_repeating.py  test_vision.py
(+13999 files in other folders)
