[tool.poetry]
name = "martian-adapters"
version = "6.10.0"
description = "Adapters as API gateways to Different LLM Models"
authors = ["Martian team <team@withmartian.com>"]
readme = "README.md"
packages = [{ include = "adapters", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
aiolimiter = "^1.1.0"
aiosignal = "^1.3.1"
async-timeout = "^4.0.3"
attrs = "^24.2.0"
regex = "^2024.9.11"
requests = "^2.32.2"
pydantic = "^2.9.2"
anthropic = "^0.36.2"
openai = "^1.52.2"
cohere = "^5.11.1"
google-generativeai = "^0.8.3"
vertexai = "^1.70.0"
tabulate = "^0.9.0"
brotli = "^1.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.24.0"
pytest-recording = "^0.13.2"
mypy = "^1.13.0"
vcrpy = "^6.0.2"
ruff = "^0.7.2"
pytest-xdist = "^3.6.1"


[tool.poetry.group.pre-commit.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
